# dpd-pali-courses

./: .gitignore  404.html  AGENTS.md  NOTES.md  README.md  download_all_materials.py  dpd.css  extra.css  footnotes.js  index.html  mkdocs.yaml  pyproject.toml  repro_table.md  search_order.js  website_analisis.md
about/: index.html
anki/: index.html
bpc/: index.html
bpc_ex/: index.html
bpc_key/: index.html
conductor/: commands.md  index.md  product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
docs/: about.md  downloads.md  index.md  literature.md  title.md
downloads/: index.html
identity/: dpd-pdf-fonts.css  dpd.css  extra.css  footnotes.js  tablesort-all.js  theme-images.js
ipc/: index.html
ipc_ex/: index.html
ipc_key/: index.html
kamma/: handoff.md  project.md  setup_state.json  tech.md  workflow.md
literature/: index.html
scripts/: README_cleaner.md  add_sutta_links.py  check_renumber.py  clean_dead_links.py  clean_docs.py  compare_docs.py  compare_md_sources.py  download_all_materials.py  fix_heading_hierarchy.py  fix_tables.py  fixing_tables.py  generate_docx.py  generate_indexes.py  generate_mkdocs_yaml.py  generate_pdfs.py  grammar_check.py  investigate_nav.py  pdf_preprocessing.sh  pre_proccessing.sh  reconstruct_6.py  regenerate_pages.sh  remove_hrs.py  remove_nav_links.py  renumber_footnotes.py  rewrite_english.py  test_clean_docs.py  update_css.py  update_media_links.py  verify_docx_content.py  verify_numbering.py  verify_pdf_content.py  verify_sources.py  verify_strict.py  web_preprocessing.sh
tools/: paths.py  (+3 more)
(+709 files in other folders)
